[EXE-1578] Expose sql to SnowflakePlan (#5)