@@ -27,7 +27,7 @@ val defaultScalaVersion = "2.12.15"
  * Tests/jenkins/BumpUpSparkConnectorVersion/run.sh
  * in snowflake repository.
  */
-val sparkConnectorVersion = "2.11.3-aiq1"
+val sparkConnectorVersion = "2.11.3-aiq2"
 
 lazy val ItTest = config("it") extend Test
 
@@ -47,17 +47,10 @@ lazy val root = project.withId("spark-snowflake").in(file("."))
     scalaVersion := sys.props.getOrElse("SPARK_SCALA_VERSION", default = defaultScalaVersion),
     // Spark 3.2/3.3 supports scala 2.12 and 2.13
     crossScalaVersions := Seq(defaultScalaVersion),
-    javacOptions ++= Seq("-source", "1.8", "-target", "1.8"),
+    javacOptions ++= Seq("-source", "17", "-target", "17"),
+    scalacOptions ++= Seq("-release", "17"),
     licenses += "Apache-2.0" -> url("http://opensource.org/licenses/Apache-2.0"),
     credentials += Credentials(Path.userHome / ".ivy2" / ".credentials"),
-    // Set up GPG key for release build from environment variable: GPG_HEX_CODE
-    // Build jenkins job must have set it, otherwise, the release build will fail.
-    credentials += Credentials(
-      "GnuPG Key ID",
-      "gpg",
-      Properties.envOrNone("GPG_HEX_CODE").getOrElse("Jenkins_build_not_set_GPG_HEX_CODE"),
-      "ignored" // this field is ignored; passwords are supplied by pinentry
-    ),
     resolvers +=
       "Sonatype OSS Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots",
     libraryDependencies ++= Seq(
@@ -90,11 +83,10 @@ lazy val root = project.withId("spark-snowflake").in(file("."))
 
     Test / testOptions += Tests.Argument("-oF"),
     Test / fork := true,
-    Test / javaOptions ++= Seq("-Xms1024M", "-Xmx4096M"),
-
-    // Release settings
-    // usePgpKeyHex(Properties.envOrElse("GPG_SIGNATURE", "12345")),
-    Global / pgpPassphrase := Properties.envOrNone("GPG_KEY_PASSPHRASE").map(_.toCharArray),
+    Test / javaOptions ++= Seq(
+      "-Xms1024M", "-Xmx4096M",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    ),
 
     publishMavenStyle := true,
     releaseCrossBuild := true,
